// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#rdb trpc-connection generator > should add rdb dev dependency to trpc dev 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "api",
  "root": "packages/api",
  "targets": {
    "dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#rdb trpc-connection generator > should generate middleware file for PostgreSQL engine 1`] = `
"import { getPrisma } from 'db';
import { initTRPC } from '@trpc/server';

export interface IDbContext {
  db?: Awaited<ReturnType<typeof getPrisma>>;
}

export const createDbPlugin = () => {
  const t = initTRPC.context<IDbContext>().create();
  return t.procedure.use(async (opts) => {
    const db = await getPrisma();

    return await opts.next({
      ctx: {
        ...opts.ctx,
        db,
      },
    });
  });
};
"
`;

exports[`ts#rdb trpc-connection generator > should generate middleware file with try/finally for MySQL engine 1`] = `
"import { getPrisma } from 'db';
import { initTRPC } from '@trpc/server';

export interface IDbContext {
  db?: Awaited<ReturnType<typeof getPrisma>>;
}

export const createDbPlugin = () => {
  const t = initTRPC.context<IDbContext>().create();
  return t.procedure.use(async (opts) => {
    const db = await getPrisma();

    try {
      return await opts.next({
        ctx: {
          ...opts.ctx,
          db,
        },
      });
    } finally {
      await db.$disconnect();
    }
  });
};
"
`;
